--- a/index.html
+++ b/index.html
@@ -35,7 +35,28 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr class="border border-success border-5 border-top-0 border-end-0 border-bottom-0" id="first">
+              <td class="align-middle">1.</td>
+              <td><img src="images/logoBentelo.png" alt="" height=40 width=40></img></td>
+              <td class="align-middle">VV.bentelo</td>
+              <td class="align-middle"></td>
+              <td class="align-middle"></td>
+              <td class="align-middle">1</td>
+              <td class="align-middle">2</td>
+              <td class="align-middle">3</td>
+              <td class="align-middle">4</td>
+              <td class="align-middle">5</td>
+              <td class="align-middle">6</td>
+              <td class="align-middle">7</td>
+              <td class="align-middle">8</td>
+            </tr>
+            <tr class="spacer">
+              <td colspan="100"></td>
+            </tr>
+          </tbody>
+
+          <tbody>
+            <tr class="border border-primary border-5 border-top-0 border-end-0 border-bottom-0" id="second">
               <td class="align-middle">1.</td>
               <td><img src="images/logoBentelo.png" alt="" height=40 width=40></img></td>
               <td class="align-middle">VV.bentelo</td>
@@ -203,7 +224,7 @@
           </tbody>
 
           <tbody>
-            <tr>
+            <tr class="border border-warning border-5 border-top-0 border-end-0 border-bottom-0" id="third">
               <td class="align-middle">1.</td>
               <td><img src="images/logoBentelo.png" alt="" height=40 width=40></img></td>
               <td class="align-middle">VV.bentelo</td>
@@ -224,7 +245,7 @@
           </tbody>
 
           <tbody>
-            <tr>
+            <tr class="border border-danger border-5 border-top-0 border-end-0 border-bottom-0" id="fourth">
               <td class="align-middle">1.</td>
               <td><img src="images/logoBentelo.png" alt="" height=40 width=40></img></td>
               <td class="align-middle">VV.bentelo</td>
@@ -245,7 +266,7 @@
           </tbody>
 
           <tbody>
-            <tr>
+            <tr class="border border-danger border-5 border-top-0 border-end-0 border-bottom-0" id="last">
               <td class="align-middle">1.</td>
               <td><img src="images/logoBentelo.png" alt="" height=40 width=40></img></td>
               <td class="align-middle">VV.bentelo</td>
@@ -264,28 +285,6 @@
               <td colspan="100"></td>
             </tr>
           </tbody>
-
-          <tbody>
-            <tr>
-              <td class="align-middle">1.</td>
-              <td><img src="images/logoBentelo.png" alt="" height=40 width=40></img></td>
-              <td class="align-middle">VV.bentelo</td>
-              <td class="align-middle"></td>
-              <td class="align-middle"></td>
-              <td class="align-middle">1</td>
-              <td class="align-middle">2</td>
-              <td class="align-middle">3</td>
-              <td class="align-middle">4</td>
-              <td class="align-middle">5</td>
-              <td class="align-middle">6</td>
-              <td class="align-middle">7</td>
-              <td class="align-middle">8</td>
-            </tr>
-            <tr class="spacer">
-              <td colspan="100"></td>
-            </tr>
-          </tbody>
-
         </table>
       </div>
     </div>
